# AOC-2023

./: .gitignore  Cargo.toml  README.md  go.mod  main.go  mix.exs
1/: 1.1.rb  1.2.rb  1.rb
day01/: day01.go
day02/: day02.go
day1/: __init__.py  calibration_refiner.py  test.txt
day10/: pipe_maze.py
day11/: cosmic_expansion.py
day12/: hot_springs.py
day13/: point_of_incidence.py
day14/: parabolic_reflector_dish.py
day2/: __init__.py  cube_conundrum.py  test.txt
day3/: __init__.py  gear_ratios.py
day4/: scratchcards.py
day5/: food_production.py
day6/: boat_race.py
day7/: camel_cards.py
day8/: haunted_wasteland.py
day9/: mirage_maintenance.py
lib/: aoc2023.ex  day1.ex  day2.ex
lib/mix/tasks/: day1.ex  day2.ex  hello.ex
src/: day10p1.rs  day10p2.rs  day1_1.rs  day1_2.rs  day2_1.rs  day2p2.rs  day3p1.rs  day3p2.rs  day4p1.rs  day4p2.rs  day5p1.rs  day5p2.rs  day6p1.rs  day6p2.rs  day7p1.rs  day7p2.rs  day8p1.rs  day8p2.rs  day9p1.rs  day9p2.rs  helper.rs  main.rs
src/inputs/: create.py
src/inputs/day3/: day3_example1.txt
src/main/kotlin/: Util.kt
src/main/kotlin/day01/: MainDay01.kt
src/main/kotlin/day02/: MainDay02.kt
src/main/kotlin/day03/: MainDay03.kt  NumberPos.kt
src/main/kotlin/day04/: MainDay04.kt
test/: aoc2023_test.exs  day1_test.exs  day2_test.exs
test/test_input/: test_input.txt
tests/: test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day5.py  test_day7.py  test_day8.py  test_day9.py
utils/: util.py
