[package]
name = "AOC-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.8.0", features = [] }
lazy_static = "1.4"
num = "0.4.1"
matches = { version = "0.1.10", features = [] }